force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Payroll__c/Payroll__c.object-meta.xml
<CustomObject>
    <description>PR1064302-644 - Create Payroll objects to hold Workday Integration data</description>
    <label>Payroll</label>
    <nameField>
        <displayFormat>WA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payrolls</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>