force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Payroll__c/fields/Base_Supp__c.field-meta.xml
<CustomField>
    <fullName>Base_Supp__c</fullName>
    <label>Base/Supp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Base_Supp</valueSetName>
    </valueSet>
</CustomField>