force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Payroll__c/fields/Classification_Group__c.field-meta.xml
<CustomField>
    <fullName>Classification_Group__c</fullName>
    <label>Classification Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Classification_Group</valueSetName>
    </valueSet>
</CustomField>