force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Payroll__c/fields/Data_Point_Value__c.field-meta.xml
<CustomField>
    <fullName>Data_Point_Value__c</fullName>
    <label>Data Point Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Point_Value</valueSetName>
    </valueSet>
</CustomField>