force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Payroll__c/fields/Headcount__c.field-meta.xml
<CustomField>
    <fullName>Headcount__c</fullName>
    <label>Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>