force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Payroll__c/fields/Hours_Type__c.field-meta.xml
<CustomField>
    <fullName>Hours_Type__c</fullName>
    <label>Hours Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight Time Hours</fullName>
            </value>
            <value>
                <fullName>Scheduled Overtime Hours</fullName>
            </value>
            <value>
                <fullName>NonScheduled Overtime Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>