force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Payroll__c/fields/Payroll_Type__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Type__c</fullName>
    <label>Payroll Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Actuals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>