force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Payroll__c/recordTypes/Headcount.recordType-meta.xml
<RecordType>
    <fullName>Headcount</fullName>
    <active>true</active>
    <label>Headcount</label>
</RecordType>