force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Payroll__c/recordTypes/Hours.recordType-meta.xml
<RecordType>
    <fullName>Hours</fullName>
    <active>true</active>
    <label>Hours</label>
</RecordType>